--- a/ru.taximaxim.codekeeper.ui.tests/pom.xml
+++ b/ru.taximaxim.codekeeper.ui.tests/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>ru.taximaxim.codeKeeper</groupId>
     <artifactId>ru.taximaxim.codeKeeper</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${global.version}</version>
     <relativePath>../ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/</relativePath>
   </parent>
 
