partially tidied up existing templates (for SQLEditor)

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
@@ -7,9 +7,9 @@ alter.drop.constraint.desc   = Dropping a constraint from a table
 
 avg.desc = AVG function
 
-case.desc  = CASE statement
+case.desc  = CASE statement (simple case) 
 
-case2.desc = CASE statement
+case2.desc = CASE statement (searched case)
 
 count.desc = COUNT function
 
