tidied up existing templates (for SQLEditor)

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
@@ -1,9 +1,9 @@
 
-alter.add.column.desc        = Adding a column
-alter.add.column.oracle.desc = Adding a column (for Oracle)
-alter.add.constraint.desc    = Adding a constraint
-alter.drop.column.desc       = Dropping a column from a table
-alter.drop.constraint.desc   = Dropping a constraint from a table
+alter.add.column.desc        = Add column
+alter.add.constraint.desc    = Add constraint
+alter.alter.column.desc      = Alter column
+alter.drop.column.desc       = Drop column
+alter.drop.constraint.desc   = Drop constraint
 
 avg.desc = AVG function
 
@@ -15,13 +15,13 @@ count.desc = COUNT function
 
 create.table.desc = CREATE TABLE statement
 
-decode.desc = Oracle SQL DECODE function
+decode.desc = DECODE function
 
 delete.desc = DELETE statement
 
-describe.desc = DESCRIBE SQL*Plus command
-
 drop.table.desc = DROP TABLE statement
+
+encode.desc = ENCODE function
 
 group.desc = GROUP BY clause
 
@@ -41,11 +41,11 @@ select2.desc = SELECT(*) statement
 
 sum.desc = SUM function
 
-to_char.desc = TO_CHAR function (for Oracle)
+to_char.desc = TO_CHAR function
 
-to_date.desc = TO_DATE function (for Oracle)
+to_date.desc = TO_DATE function
 
-to_number.desc = TO_NUMBER function (for Oracle)
+to_number.desc = TO_NUMBER function
 
 truncate.desc = TRUNCATE statement
 
