added new templates for SQLEditor and made small refactoring

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
@@ -5,23 +5,65 @@ alter.alter.column.desc      = Alter column
 alter.drop.column.desc       = Drop column
 alter.drop.constraint.desc   = Drop constraint
 
+alter.rule.desc = ALTER RULE statement 
+
+alter.trigger.desc = ALTER TRIGGER statement
+
 avg.desc = AVG function
 
 case.desc  = CASE statement (simple case) 
 
 case2.desc = CASE statement (searched case)
 
+comment.desc = COMMENT ON type name IS 'text'
+
+comment2.desc = COMMENT ON type name ON tableName IS 'text'
+
 count.desc = COUNT function
 
+create.domain.desc = CREATE DOMAIN statement
+
+create.index.desc = CREATE INDEX statement
+
+create.fts_configuration.desc = CREATE FTS_CONFIGURATION statement
+
+create.fts_dictionary.desc = CREATE FTS_DICTIONARY statement
+
+create.fts_parser.desc = CREATE FTS_PARSER statement
+
+create.fts_template.desc = CREATE FTS_TEMPLATE statement
+
+create.function.desc = CREATE FUNCTION statement
+
+create.procedure.desc = CREATE PROCEDURE statement
+
+create.rule.desc = CREATE RULE statement
+
 create.table.desc = CREATE TABLE statement
+
+create.trigger.desc = CREATE TRIGGER statement
+
+create.type.desc = CREATE TYPE statement (composite)
+
+create.type2.desc = CREATE TYPE statement (enumerated)
+
+create.type3.desc = CREATE TYPE statement (range)
+
+create.type4.desc = CREATE TYPE statement (base data type)
+
+create.view.desc = CREATE VIEW statement
 
 decode.desc = DECODE function
 
 delete.desc = DELETE statement
 
-drop.table.desc = DROP TABLE statement
+drop.rule.desc = DROP RULE statement
+
+drop.trigger.desc = DROP TRIGGER statement
 
 encode.desc = ENCODE function
+
+grant.desc = define access privileges
 
 group.desc = GROUP BY clause
 
@@ -34,6 +76,8 @@ max.desc = MAX function
 min.desc = MIN function
 
 order.desc = ORDER BY clause
+
+revoke.desc = remove access privileges
 
 select.desc  = SELECT(columns) statement
 
