fixed function and procedute templates, made refactoring, add comments

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
@@ -1,9 +1,9 @@
 
-alter.add.column.desc        = Add column
-alter.add.constraint.desc    = Add constraint
-alter.alter.column.desc      = Alter column
-alter.drop.column.desc       = Drop column
-alter.drop.constraint.desc   = Drop constraint
+alter.add.column.desc        = ALTER TABLE ... ADD column
+alter.add.constraint.desc    = ALTER TABLE ... ADD constraint
+alter.alter.column.desc      = ALTER TABLE ... ALTER column
+alter.drop.column.desc       = ALTER TABLE ... DROP column
+alter.drop.constraint.desc   = ALTER TABLE ... DROP constraint
 
 alter.rule.desc = ALTER RULE statement 
 
