--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplate.properties
@@ -39,6 +39,8 @@ create.procedure.desc = CREATE PROCEDURE statement
 
 create.rule.desc = CREATE RULE statement
 
+create.sequence.desc = CREATE SEQUENCE statement
+
 create.table.desc = CREATE TABLE statement
 
 create.trigger.desc = CREATE TRIGGER statement
@@ -74,6 +76,26 @@ insert2.desc = INSERT statement (without columns specified)
 max.desc = MAX function
 
 min.desc = MIN function
+
+ms.create.function.desc = [MS] CREATE FUNCTION statement (return scalar)
+
+ms.create.function2.desc = [MS] CREATE FUNCTION statement (return TABLE)
+
+ms.create.sequence.desc = [MS] CREATE SEQUENCE statement
+
+ms.create.procedure.desc = [MS] CREATE PROCEDURE statement
+
+ms.create.table.desc = [MS] CREATE TABLE statement
+
+ms.create.type.desc = [MS] CREATE TYPE statement
+
+ms.create.view.desc = [MS] CREATE VIEW statement
+
+ms.extended.property.add.desc = [MS] add extended property
+
+ms.extended.property.drop.desc = [MS] drop extended property
+
+ms.extended.property.update.desc = [MS] update extended property
 
 order.desc = ORDER BY clause
 
