added common templates
SQLEditorTemplateAssistProcessor, SQLEditorTemplateContextType,
SQLEditorTemplateManager, plugin : added logic to use common templates
templates_common, sqlTemplateCommon, templates_ms, sqlTemplateMs,
templates_pg, sqlTemplatePg : moved common templates and their
translations to separate files

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -1036,6 +1036,11 @@
             id="ru.taximaxim.codekeeper.ui.sqlEditorContextTypeMs"
             name="SQLEditor Context Type MicrosoftSQL">
         </contextType>
+        <contextType
+            class="ru.taximaxim.codekeeper.ui.sqledit.SQLEditorTemplateContextType"
+            id="ru.taximaxim.codekeeper.ui.sqlEditorContextTypeCommon"
+            name="SQLEditor Context Type Common">
+        </contextType>
         <include
             file="sql_templates/templates_pg.xml"
             translations="sql_templates/sqlTemplatePg.properties">
@@ -1043,6 +1048,10 @@
         <include
             file="sql_templates/templates_ms.xml"
             translations="sql_templates/sqlTemplateMs.properties">
+        </include>
+        <include
+            file="sql_templates/templates_common.xml"
+            translations="sql_templates/sqlTemplateCommon.properties">
         </include>
     </extension>
     <extension point="org.eclipse.ui.elementFactories">
