added 'alter owner' template for PostgreSQL

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
@@ -1,5 +1,7 @@
 
-alter.rule.desc = ALTER RULE statement 
+alter.owner.desc = ALTER OWNER statement
+
+alter.rule.desc = ALTER RULE statement
 
 alter.trigger.desc = ALTER TRIGGER statement
 
