--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -404,7 +404,7 @@
                 </separator>
                 <command
                     commandId="ru.taximaxim.codekeeper.ui.command.OpenSQLEditor"
-                    icon="icons/file_obj.png"
+                    icon="IMG_OBJ_FILE"
                     label="%command.commandname.OpenSQLEditor"
                     style="push">
                 </command>
