--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -124,8 +124,14 @@
         <command
             categoryId="ru.taximaxim.codekeeper.ui.categoryPgCodeKeeper"
             defaultHandler="ru.taximaxim.codekeeper.ui.handlers.OpenDocs"
-            id="ru.taximaxim.codekeeper.ui.openDocs"
+            id="ru.taximaxim.codekeeper.ui.command.OpenDocs"
             name="%command.commandname.OpenDocs">
+        </command>
+        <command
+            categoryId="ru.taximaxim.codekeeper.ui.categoryPgCodeKeeper"
+            defaultHandler="ru.taximaxim.codekeeper.ui.handlers.Format"
+            id="ru.taximaxim.codekeeper.ui.command.Format"
+            name="%command.commandname.Format">
         </command>
     </extension>
     <extension point="org.eclipse.ui.handlers">
@@ -438,7 +444,7 @@
                     style="push">
                 </command>
                 <command
-                    commandId="ru.taximaxim.codekeeper.ui.openDocs"
+                    commandId="ru.taximaxim.codekeeper.ui.command.OpenDocs"
                     label="%command.label.openDocs"
                     style="push">
                 </command>
@@ -623,7 +629,7 @@
         </menuContribution>
         <menuContribution locationURI="menu:help?before=helpContents">
             <command
-                commandId="ru.taximaxim.codekeeper.ui.openDocs"
+                commandId="ru.taximaxim.codekeeper.ui.command.OpenDocs"
                 label="%command.label.openDocs"
                 style="push"
                 icon="icons/app_icon16.png">
@@ -1433,6 +1439,12 @@
             contextId="org.eclipse.ui.contexts.window"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M3+Insert">
+        </key>
+        <key
+            commandId="ru.taximaxim.codekeeper.ui.command.Format"
+            contextId="ru.taximaxim.codekeeper.ui.pgCodeKeeperEditorScope"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+M2+F">
         </key>
     </extension>
     <extension point="org.eclipse.ui.startup">
