added saving of DB passwords in eclipse secure storage

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -1447,4 +1447,8 @@
             id="ru.taximaxim.codekeeper.ui.SqlContentViewerCreator">
         </viewer>
     </extension>
+    <extension
+          id="ru.taximaxim.codekeeper.ui.SecureStorage"
+          point="org.eclipse.equinox.security.secureStorage">
+    </extension>
 </plugin>
