added eclipse build

--- a/ru.taximaxim.codekeeper.mainapp/build.properties
+++ b/ru.taximaxim.codekeeper.mainapp/build.properties
@@ -5,5 +5,9 @@ bin.includes = META-INF/,\
                about.ini,\
                about.properties,\
                about_ru_RU.properties,\
-               OSGI-INF/
+               splash.bmp,\
+               plugin.xml,\
+               plugin_customization.ini,\
+               plugin.properties,\
+               plugin_ru_RU.properties
 source.. = src/
