--- a/ru.taximaxim.codekeeper.mainapp/.gitignore
+++ b/ru.taximaxim.codekeeper.mainapp/.gitignore
@@ -1,6 +1,5 @@
 /target
-/product/target
-/productinfocenter/target
+/product/*/target
 /ru.taximaxim.codeKeeper/workspace
 /updatesite/target
 /feature/target
