--- a/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
@@ -45,14 +45,15 @@ to update all relevant poms and metadatas
         <module>../../ru.taximaxim.codekeeper.cli.tests</module>
         <module>../feature</module>
         <module>../updatesite</module>
-        <module>../product</module>
+        <module>../product/rcp</module>
+        <module>../product/standalone</module>
     </modules>
 
     <properties>
         <global.version>5.9.7-SNAPSHOT</global.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <tycho.version>1.2.0</tycho.version>
+        <tycho.version>1.5.1</tycho.version>
         <target.definition.file>app</target.definition.file>
 
         <sonar.language>java</sonar.language>
