--- a/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
@@ -99,6 +99,39 @@ to update all relevant poms and metadatas
             </build>
         </profile>
         <profile>
+            <id>deploy-product-github</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.ragedunicorn.tools.maven</groupId>
+                        <artifactId>github-release-maven-plugin</artifactId>
+                        <version>1.0.1</version>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>github-release</goal>
+                                </goals>
+                                <configuration>
+                                    <owner>pgcodekeeper</owner>
+                                    <repository>pgcodekeeper</repository>
+                                    <authToken>${env.GITHUB_TOKEN}</authToken>
+                                    <tagName>v${unqualifiedVersion}</tagName>
+                                    <name>pgCodeKeeper ${unqualifiedVersion}</name>
+                                    <assets>
+                                        <asset>../product/stanalone/target/products/pgCodeKeeper-cli-${unqualifiedVersion}.zip</asset>
+                                        <asset>../product/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-win32.win32.x86_64.zip</asset>
+                                        <asset>../product/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-linux.gtk.x86_64.tar.gz</asset>
+                                        <asset>../product/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-macosx.cocoa.x86_64.tar.gz</asset>
+                                    </assets>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>internal</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
