--- a/apgdiff/pom.xml
+++ b/apgdiff/pom.xml
@@ -9,7 +9,7 @@
         <groupId>ru.taximaxim.codeKeeper</groupId>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
         <version>${global.version}</version>
-        <relativePath>../ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/</relativePath>
+        <relativePath>../</relativePath>
     </parent>
 
     <groupId>ru.taximaxim.codeKeeper</groupId>
