--- a/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
         <groupId>ru.taximaxim.codeKeeper</groupId>
         <version>${global.version}</version>
-        <relativePath>../../ru.taximaxim.codeKeeper/</relativePath>
+        <relativePath>../../../</relativePath>
     </parent>
 
     <groupId>ru.taximaxim.codeKeeper</groupId>
