--- a/ru.taximaxim.codekeeper.ui.tests/pom.xml
+++ b/ru.taximaxim.codekeeper.ui.tests/pom.xml
@@ -6,7 +6,7 @@
     <groupId>ru.taximaxim.codeKeeper</groupId>
     <artifactId>ru.taximaxim.codeKeeper</artifactId>
     <version>${global.version}</version>
-    <relativePath>../ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/</relativePath>
+    <relativePath>../</relativePath>
   </parent>
 
   <groupId>ru.taximaxim.codeKeeper</groupId>
@@ -30,9 +30,6 @@
   <profiles>
     <profile>
       <id>internal</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
       <dependencies>
         <dependency>
           <groupId>ru.taximaxim.codeKeeper</groupId>
