added update preferences

--- a/ru.taximaxim.codekeeper.mainapp/plugin_customization.ini
+++ b/ru.taximaxim.codekeeper.mainapp/plugin_customization.ini
@@ -1,11 +1,13 @@
 # perspective that the workbench opens initially
 org.eclipse.ui/defaultPerspectiveId=ru.taximaxim.codekeeper.ui.mainperspective
 
-# new-style tabs by default
-org.eclipse.ui/SHOW_TRADITIONAL_STYLE_TABS=false
-
 # put the perspective switcher on the top right
 org.eclipse.ui/DOCK_PERSPECTIVE_BAR=topRight
 
 # show progress on startup
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=true
+
+# check for updates
+org.eclipse.equinox.p2.ui.sdk.scheduler/enabled=true
+org.eclipse.equinox.p2.ui.sdk.scheduler/schedule=on-fuzzy-schedule
+org.eclipse.equinox.p2.ui.sdk.scheduler/fuzzy_recurrence=Once a week
