refactored work with libraries in project explorer
NavigationLibrariesActionProvider: added actions to update and clear cache
DependencyProperties: added option to clear cache
LibraryContainer: moved and divided into typed classes
Activator: added icon for ZIP-files

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -1226,9 +1226,7 @@
                 </adapt>
             </triggerPoints>
             <possibleChildren>
-                <or>
-                    <instanceof value="ru.taximaxim.codekeeper.ui.views.navigator.LibraryContainer" />
-                </or>
+                <instanceof value="ru.taximaxim.codekeeper.ui.libraries.AbstractLibrary"/>
             </possibleChildren>
             <commonSorter class="ru.taximaxim.codekeeper.ui.views.navigator.DisabledSorter">
             </commonSorter>
@@ -1237,8 +1235,7 @@
             class="ru.taximaxim.codekeeper.ui.views.navigator.NavigationLibrariesActionProvider"
             id="ru.taximaxim.codekeeper.ui.views.navigator.codekeeperLibrariesActionProvider">
             <enablement>
-                <instanceof value="ru.taximaxim.codekeeper.ui.views.navigator.LibraryContainer">
-                </instanceof>
+                <instanceof value="ru.taximaxim.codekeeper.ui.libraries.AbstractLibrary"/>
             </enablement>
         </actionProvider>
         <navigatorContent
