added read-only input for libraries
LibraryLoader: removed writable argument
plugin.xml, CodekeeperLinkHelper: added link helper for libraries
LibraryUtils: added method to open library
AbstractLibrary: added equals() and hashCode() methods for compare input
SQLEditorCommonDocumentProvider: changed parent class to setup document when creating it

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -1117,16 +1117,21 @@
             class="ru.taximaxim.codekeeper.ui.editors.CodekeeperLinkHelper"
             id="ru.taximaxim.codekeeper.ui.editors.codekeeperlinkHelper">
             <editorInputEnablement>
-                <instanceof value="ru.taximaxim.codekeeper.ui.editors.ProjectEditorInput">
-                </instanceof>
+                 <or>
+                    <instanceof value="ru.taximaxim.codekeeper.ui.editors.ProjectEditorInput"/>
+                    <instanceof value="ru.taximaxim.codekeeper.ui.libraries.LibraryEditorInput"/>
+                 </or>
             </editorInputEnablement>
             <selectionEnablement>
-                <adapt type="org.eclipse.core.resources.IProject">
-                    <test
-                        property="org.eclipse.core.resources.projectNature"
-                        value="ru.taximaxim.codekeeper.ui.nature">
-                    </test>
-                </adapt>
+                <or>
+                    <adapt type="org.eclipse.core.resources.IProject">
+                        <test
+                            property="org.eclipse.core.resources.projectNature"
+                            value="ru.taximaxim.codekeeper.ui.nature">
+                        </test>
+                    </adapt>
+                    <instanceof value="ru.taximaxim.codekeeper.ui.libraries.FileLibrary"/>
+                </or>
             </selectionEnablement>
         </linkHelper>
     </extension>
