--- a/ru.taximaxim.codekeeper.mainapp/build.properties
+++ b/ru.taximaxim.codekeeper.mainapp/build.properties
@@ -8,6 +8,5 @@ bin.includes = META-INF/,\
                splash.bmp,\
                plugin.xml,\
                plugin_customization.ini,\
-               plugin.properties,\
-               plugin_ru_RU.properties
+               OSGI-INF/
 source.. = src/
