--- a/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
@@ -14,15 +14,11 @@
     <artifactId>ru.taximaxim.codekeeper.rcp.product</artifactId>
     <version>5.10.0-SNAPSHOT</version>
     <packaging>eclipse-repository</packaging>
-    
-    <properties>
-        <eclipse-p2-repo.url>https://download.eclipse.org/releases/latest/</eclipse-p2-repo.url>
-    </properties>
-    
+
     <repositories>
         <repository>
             <id>eclipse-p2-repo</id>
-            <url>${eclipse-p2-repo.url}</url>
+            <url>https://download.eclipse.org/releases/latest/</url>
             <layout>p2</layout>
         </repository>
     </repositories>
@@ -75,11 +71,6 @@
                         <id>materialize-products</id>
                         <goals>
                             <goal>materialize-products</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>archive-products</id>
-                        <goals>
                             <goal>archive-products</goal>
                         </goals>
                     </execution>
