--- a/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
@@ -20,6 +20,14 @@
         <archive-filename>pgCodeKeeper-cli-${unqualifiedVersion}</archive-filename>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>eclipse-p2-repo</id>
+            <url>https://download.eclipse.org/releases/latest/</url>
+            <layout>p2</layout>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
