added dynamic version numbers into About l10n texts

--- a/ru.taximaxim.codekeeper.mainapp/build.properties
+++ b/ru.taximaxim.codekeeper.mainapp/build.properties
@@ -3,6 +3,7 @@ bin.includes = META-INF/,\
                icons/,\
                about.html,\
                about.ini,\
+               about.mappings,\
                about.properties,\
                about_ru_RU.properties,\
                splash.bmp,\
