--- a/ru.taximaxim.codekeeper.mainapp/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/pom.xml
@@ -14,4 +14,17 @@
     <artifactId>ru.taximaxim.codekeeper.mainapp</artifactId>
     <version>5.10.0-SNAPSHOT</version>
     <packaging>eclipse-plugin</packaging>
+    
+    <build>
+        <resources>
+            <resource>
+                <!-- replace properties in about.mapping l10n file -->
+                <filtering>true</filtering>
+                <directory>${project.basedir}</directory>
+                <includes>
+                    <include>about.mappings</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
